[gd_scene load_steps=10 format=3 uid="uid://dd53xm40bo1ti"]

[ext_resource type="TileSet" path="res://Levels/Crypt/DungeonTileset.tres" id="1"]
[ext_resource type="PackedScene" uid="uid://bx2lyqitg86pb" path="res://Player/Player.tscn" id="2"]
[ext_resource type="TileSet" uid="uid://dk55qy0b1y6en" path="res://Levels/Crypt/DungeonTileset4.tres" id="2_lu11g"]
[ext_resource type="PackedScene" path="res://Scenery/Camera2D.tscn" id="3"]
[ext_resource type="PackedScene" path="res://Scenery/Portal.tscn" id="4"]
[ext_resource type="Script" path="res://Levels/Crypt/Crypt.gd" id="5"]
[ext_resource type="PackedScene" path="res://Scenery/SecretDoor.tscn" id="6"]
[ext_resource type="Resource" path="res://Items/Keys/SilverKey.tres" id="7"]
[ext_resource type="PackedScene" path="res://Items/Keys/Key.tscn" id="8"]

[node name="Crypt" type="Node"]
script = ExtResource("5")

[node name="CryptFloorTileMap4" type="TileMap" parent="."]
tile_set = ExtResource("2_lu11g")
format = 2
layer_0/tile_data = PackedInt32Array(65542, 0, 8, 131078, 0, 9, 131079, 65536, 9, 65543, 65536, 8, 65544, 65536, 8, 65545, 65536, 8, 65546, 65536, 8, 65547, 65536, 8, 65548, 131072, 8, 131084, 131072, 9, 131083, 65536, 9, 131082, 65536, 9, 131081, 65536, 9, 131080, 65536, 9, 196614, 0, 9, 196615, 65536, 9, 196616, 65536, 9, 196617, 65536, 9, 196618, 65536, 9, 196619, 65536, 9, 196620, 131072, 9, 262156, 131072, 10, 262155, 65536, 9, 262154, 65536, 9, 262153, 65536, 9, 262152, 65536, 9, 262151, 65536, 10, 262150, 0, 10, 327691, 131072, 10, 327690, 65536, 9, 327689, 65536, 9, 327688, 0, 10, 589834, 131072, 9, 524298, 131072, 9, 458762, 131072, 9, 393226, 131072, 9, 589833, 65536, 9, 524297, 65536, 9, 458761, 0, 9, 393225, 0, 9, 1114124, 131072, 10, 1048588, 131072, 9, 983052, 131072, 9, 917516, 131072, 9, 851980, 131072, 8, 1114123, 65536, 10, 1048587, 65536, 9, 983051, 65536, 9, 917515, 65536, 9, 851979, 65536, 8, 1114122, 65536, 10, 1048586, 65536, 9, 983050, 65536, 9, 917514, 65536, 9, 851978, 65536, 9, 1114121, 65536, 10, 1048585, 65536, 9, 983049, 65536, 9, 917513, 65536, 9, 851977, 65536, 9, 1114120, 65536, 10, 1048584, 65536, 9, 983048, 65536, 9, 917512, 65536, 9, 851976, 65536, 8, 1114119, 65536, 10, 1048583, 65536, 9, 983047, 65536, 9, 917511, 65536, 9, 851975, 65536, 8, 1114118, 0, 10, 1048582, 0, 9, 983046, 0, 9, 917510, 0, 9, 851974, 0, 8, 786442, 131072, 9, 720906, 131072, 9, 655370, 131072, 9, 786441, 0, 9, 720905, 0, 9, 655369, 0, 9, 1114114, 131072, 10, 1048578, 131072, 9, 983042, 131072, 9, 917506, 131072, 9, 851970, 131072, 8, 1114113, 65536, 10, 1048577, 65536, 9, 983041, 65536, 9, 917505, 65536, 9, 851969, 65536, 8, 1114112, 65536, 10, 1048576, 65536, 9, 983040, 65536, 9, 917504, 65536, 9, 851968, 65536, 9, 1179647, 65536, 10, 1114111, 65536, 9, 1048575, 65536, 9, 983039, 65536, 9, 917503, 65536, 9, 1179646, 65536, 10, 1114110, 65536, 9, 1048574, 65536, 9, 983038, 65536, 9, 917502, 65536, 8, 1179645, 0, 10, 1114109, 0, 9, 1048573, 0, 9, 983037, 0, 9, 917501, 0, 8, 786432, 131072, 9, 720896, 131072, 9, 655360, 131072, 9, 589824, 65536, 9, 524288, 65536, 9, 458752, 131072, 9, 393216, 131072, 9, 327680, 131072, 9, 851967, 0, 9, 786431, 0, 9, 720895, 0, 9, 655359, 0, 9, 589823, 0, 9, 524287, 0, 9, 458751, 0, 9, 393215, 65536, 9, 327681, 0, 10, 393214, 0, 9, 262146, 131072, 10, 196610, 131072, 9, 131074, 131072, 9, 65538, 131072, 9, 2, 131072, 8, 262145, 65536, 9, 196609, 65536, 9, 131073, 65536, 9, 65537, 65536, 9, 1, 65536, 8, 262144, 65536, 9, 196608, 65536, 9, 131072, 65536, 9, 65536, 65536, 9, 0, 65536, 8, 327679, 65536, 9, 262143, 65536, 9, 196607, 65536, 9, 131071, 65536, 9, 65535, 65536, 8, 327678, 65536, 9, 262142, 65536, 9, 196606, 65536, 9, 131070, 65536, 9, 65534, 65536, 8, 327677, 0, 9, 262141, 0, 9, 196605, 0, 9, 131069, 0, 9, 65533, 0, 8, 589832, 65536, 10, 524296, 65536, 8, 589831, 65536, 10, 524295, 65536, 8, 589830, 65536, 10, 524294, 65536, 8, 589829, 65536, 10, 524293, 65536, 8, 589828, 65536, 10, 524292, 65536, 8, 589827, 65536, 10, 524291, 65536, 8, 589826, 65536, 10, 524290, 65536, 8, 589825, 65536, 10, 524289, 65536, 8)

[node name="CryptFloorTileMap" type="TileMap" parent="."]
tile_set = ExtResource("1")
format = 2

[node name="CryptWallTileMap" type="TileMap" parent="."]
tile_set = ExtResource("1")
format = 2
layer_0/tile_data = PackedInt32Array(-4, 196611, 0, -3, 589827, 2, -2, 65539, 2, -1, 589827, 2, -65536, 65539, 2, -65535, 589827, 2, -65534, 65539, 2, -65533, 262147, 0, 65532, 655363, 1, 3, 524291, 1, 5, 196611, 0, 6, 589827, 2, 7, 65539, 2, 8, 589827, 2, 9, 65539, 2, 10, 589827, 2, 11, 65539, 2, 12, 589827, 2, 13, 262147, 0, 131068, 131075, 1, 65539, 3, 1, 65541, 655363, 1, 65548, 393219, 0, 65549, 524291, 1, 196604, 655363, 1, 131075, 524291, 1, 131077, 131075, 1, 131085, 3, 1, 262140, 131075, 1, 196611, 3, 1, 196613, 655363, 1, 196621, 524291, 1, 327676, 655363, 1, 262147, 524291, 1, 262148, 589827, 0, 262149, 131075, 1, 262157, 3, 1, 262158, 589827, 0, 393212, 65539, 0, 393213, 65539, 0, 393214, 655363, 0, 327681, 524291, 0, 327682, 65539, 0, 327683, 65539, 0, 327684, 589827, 0, 327685, 65539, 0, 327686, 65539, 0, 327687, 65539, 0, 327688, 655363, 0, 327691, 524291, 0, 327692, 65539, 0, 327693, 65539, 0, 327694, 589827, 0, 458748, 65539, 0, 458749, 65539, 0, 458750, 131075, 1, 393217, 3, 1, 393218, 65539, 0, 393219, 65539, 0, 393220, 589827, 0, 393221, 589827, 0, 393222, 589827, 0, 393223, 589827, 0, 393224, 131075, 1, 393227, 3, 1, 393228, 589827, 0, 393229, 589827, 0, 393230, 589827, 0, 524286, 131075, 1, 458753, 524291, 2, 458754, 589827, 2, 458755, 65539, 2, 458756, 589827, 2, 458757, 65539, 2, 458758, 589827, 2, 458759, 65539, 2, 458760, 655363, 1, 458763, 524291, 1, 589822, 131075, 1, 524299, 3, 1, 655358, 131075, 1, 589825, 524291, 0, 589826, 65539, 0, 589827, 65539, 0, 589828, 65539, 0, 589829, 65539, 0, 589830, 65539, 0, 589831, 65539, 0, 589832, 655363, 0, 589835, 3, 1, 720894, 131075, 1, 655361, 3, 1, 655362, 65539, 0, 655363, 65539, 0, 655364, 65539, 0, 655365, 65539, 0, 655366, 65539, 0, 655367, 65539, 0, 655368, 131075, 1, 655371, 524291, 1, 786430, 131075, 1, 720897, 3, 1, 720904, 131075, 1, 720907, 327683, 1, 851964, 196611, 0, 851965, 589827, 2, 851966, 655363, 2, 786433, 524291, 2, 786434, 65539, 2, 786435, 262147, 0, 786437, 196611, 0, 786438, 589827, 2, 786439, 65539, 2, 786440, 655363, 2, 786443, 524291, 2, 786444, 65539, 2, 786445, 262147, 0, 917500, 655363, 1, 851969, 10, 0, 851970, 10, 0, 851971, 524291, 1, 851973, 655363, 1, 851981, 524291, 1, 983036, 131075, 1, 983037, 13, 0, 917506, 10, 0, 917507, 3, 1, 917509, 131075, 1, 917517, 3, 1, 1048572, 655363, 1, 1048573, 13, 0, 1048575, 14, 0, 983042, 17, 0, 983043, 524291, 1, 983045, 655363, 1, 983053, 524291, 1, 1114108, 131075, 1, 1114109, 13, 0, 1114111, 14, 0, 1048577, 15, 0, 1048578, 17, 0, 1048579, 3, 1, 1048581, 131075, 1, 1048589, 3, 1, 1179644, 655363, 1, 1114113, 15, 0, 1114115, 524291, 1, 1114116, 589827, 0, 1114117, 655363, 1, 1114124, 393219, 0, 1114125, 524291, 1, 1114126, 589827, 0, 1245180, 65539, 0, 1245181, 65539, 0, 1245182, 65539, 0, 1245183, 65539, 0, 1179648, 65539, 0, 1179649, 65539, 0, 1179650, 65539, 0, 1179651, 65539, 0, 1179652, 589827, 0, 1179653, 65539, 0, 1179654, 65539, 0, 1179655, 65539, 0, 1179656, 65539, 0, 1179657, 65539, 0, 1179658, 65539, 0, 1179659, 65539, 0, 1179660, 65539, 0, 1179661, 65539, 0, 1179662, 589827, 0, 1245188, 589827, 0, 1245189, 589827, 0, 1245190, 589827, 0, 1245191, 589827, 0, 1245192, 589827, 0, 1245193, 589827, 0, 1245194, 589827, 0, 1245195, 589827, 0, 1245196, 589827, 0, 1245197, 589827, 0, 1245198, 589827, 0)

[node name="CryptFurnitureTileMap" type="TileMap" parent="."]
tile_set = ExtResource("1")
format = 2
layer_0/tile_data = PackedInt32Array(-3, 17, 0, -65536, 14, 0, -65535, 14, 0, -65534, 14, 0, 65533, 17, 0, 65534, 15, 0, 0, 14, 0, 1, 14, 0, 2, 14, 0, 131070, 16, 0, 65542, 9, 0, 65543, 65545, 0, 196605, 65547, 0, 131073, 12, 1, 131074, 12, 1, 262141, 65547, 0, 196610, 65546, 0, 196614, 9, 0, 196615, 65545, 0, 196619, 65545, 0, 196620, 9, 0, 327677, 65547, 0, 262146, 10, 0, 917511, 9, 0, 917512, 65545, 0, 917513, 9, 0, 917514, 9, 0, 917515, 65545, 0, 917516, 9, 0, 1048583, 9, 0, 1048584, 65545, 0, 1048585, 9, 0, 1048586, 9, 0, 1048587, 65545, 0, 1048588, 9, 0)

[node name="CryptSecretPassageTileMap" type="TileMap" parent="."]
tile_set = ExtResource("1")
format = 2
layer_0/tile_data = PackedInt32Array(655372, 65539, 2, 655373, 65539, 2, 655374, 65539, 2, 655375, 65539, 2, 655376, 65539, 2, 655377, 65539, 2, 655378, 262147, 0, 720914, 3, 1, 786446, 65539, 0, 786447, 65539, 0, 786448, 65539, 0, 786449, 65539, 0, 786450, 65539, 0)

[node name="CryptSecretPassageStrairs" type="TileMap" parent="CryptSecretPassageTileMap"]
tile_set = ExtResource("1")
format = 2
layer_0/tile_data = PackedInt32Array(720913, 393219, 0)

[node name="Camera3D" parent="." instance=ExtResource("3")]
position = Vector2(157, 49)

[node name="TopLeft" parent="Camera3D/Limits" index="0"]
position = Vector2(-65, -19)

[node name="BottomRight" parent="Camera3D/Limits" index="1"]
position = Vector2(311, 300)

[node name="Node2D" type="Node2D" parent="."]

[node name="Player" parent="Node2D" instance=ExtResource("2")]
position = Vector2(157, 49)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Node2D/Player"]
remote_path = NodePath("../../../Camera3D")

[node name="Fixtures" type="Node2D" parent="Node2D"]

[node name="Portal_Village_North" parent="Node2D/Fixtures" instance=ExtResource("4")]
position = Vector2(199, 25)
starting_position = Vector2(1279, 422)

[node name="Portal_Village_South" parent="Node2D/Fixtures" instance=ExtResource("4")]
position = Vector2(199, 280)
starting_position = Vector2(1270, 667)

[node name="Portal_Village_Secret" parent="Node2D/Fixtures" instance=ExtResource("4")]
position = Vector2(281, 184)
starting_position = Vector2(1423, 570)

[node name="SecretDoor" parent="Node2D/Fixtures" instance=ExtResource("6")]
position = Vector2(184, 183)

[node name="Key" parent="." instance=ExtResource("8")]
position = Vector2(-36, 219)
item_resource = ExtResource("7")

[connection signal="door_opened" from="Node2D/Fixtures/SecretDoor" to="." method="_on_SecretDoor_door_opened"]

[editable path="Camera3D"]
